# Inference-Speed-and-Quality-Dashboard

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  lgbm_predictor.cpp  lr.cpp
docker/: Dockerfile
docs/: cpp_runtime_proof.md  project_brief.md  runbook.md
docs/licenses/: pip-licenses.csv
docs/sbom/: cyclonedx-sbom.json
src/inference_bench/: __init__.py  config.py  paths.py
src/inference_bench/bench/: metrics.py
src/inference_bench/data/: __init__.py  opensky_csv.py  synth.py
src/inference_bench/db/: io.py  schema.sql
src/inference_bench/inference/: __init__.py  cpp_lgbm.py  cpp_lr.py
src/inference_bench/models/: __init__.py  manifest.py
src/inference_bench/ops/: __init__.py  run_logger.py  run_tests.py
src/inference_bench/pipeline/: run_all.py  run_infer_cpp.py  run_infer_cpp_lr.py  run_infer_py.py  run_trainer.py
src/inference_bench/viz/: __init__.py  app.py  export_static.py
