[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-inference-benchmark"
version = "0.1.0"
description = "Reproducible edge inference benchmark harness (Python LightGBM vs C++ LR)."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
